--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.1",
   "description":
     "A modular scale SCSS function with a few complimentary helper functions",
+  "main": "_functions.scss",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/boov/modular-scale-scss-functions.git"
   },
-  "keywords": ["modular", "scale", "scss", "functions"],
+  "keywords": ["modular", "scale", "scss", "css", "functions"],
   "author": "Matthew Booth <matt@boov.co.uk>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/boov/modular-scale-scss-functions/issues"
   },
