--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "scss-modular-scale",
-  "version": "1.0.1",
-  "description":
-    "A modular scale SCSS function with a few complimentary helper functions",
+  "version": "1.1.0",
+  "description": "A modular scale SCSS function with a few complimentary helper functions",
   "main": "_functions.scss",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/boov/scss-modular-scale.git"
   },
-  "keywords": ["modular", "scale", "scss", "css", "functions"],
-  "author": "Matthew Booth <matt@boov.co.uk>",
+  "scripts": {
+    "dev": "npm run test -- --watch",
+    "test": "sass .:. --no-source-map"
+  },
+  "keywords": [
+    "modular",
+    "scale",
+    "scss",
+    "css",
+    "functions"
+  ],
+  "author": "Matthew Booth <matthew@boov.co.uk>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/boov/scss-modular-scale/issues"
   },
   "homepage": "https://github.com/boov/scss-modular-scale#readme",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-plumber": "^1.2.0",
-    "gulp-sass": "^3.1.0"
+    "sass": "^1.17.3"
   }
 }
